--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node index.js",
-    "dev":"bun --watch src/index"
+    "dev": "bun --watch src/index"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -14,6 +14,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "elevenlabs": "^1.55.0",
     "elysia": "^1.2.25"
   }
 }
